<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/tiempo_220"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/texto"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login" />

        <Button
            android:id="@+id/buttonGuardar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_guardar" />

        <Button
            android:id="@+id/buttonBuscar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_buscar" />

        <Button
            android:id="@+id/buttonPasarParametros"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_pasar_parametros" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>